final_homework/MLService + monitoring + kubernetes + helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ml-platform-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /ml-service
            pathType: Prefix
            backend:
              service:
                name: ml-service
                port:
                  number: 8000
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
